--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -2,13 +2,18 @@
   &-1
     animation: float1 3.5s ease-in-out infinite alternate
     position: absolute
-    top: 20%
-    right: 10%
+    top: 30%
+    right: 70%
   &-2
     animation: float1 2.8s ease-in-out infinite alternate
     position: absolute
-    top: 51%
-    right: 30%
+    top: 21%
+    right: 20%
+  &-3
+    animation: float1 2.8s ease-in-out infinite alternate
+    position: absolute
+    top: 75%
+    right: 45%
 
 @keyframes float1
   0%
@@ -27,4 +32,35 @@
   color: $color-primario
 figcaption
   font-weight: normal
+
+.banner-principal
+  @media (max-width: $bp-max-md)
+    .tarjeta
+      background-image: url('../assets/curso/portada/fondo-banner-principal-movil.png') !important
+      background-repeat: no-repeat 
+      background-size: 100% 100%
+      background-position: cover
+    &__info
+      padding-top: 14% !important 
+    h1, p
+      color: $white
  
+  @media (min-width: 768px) and (max-width: 1024px)
+    .tarjeta
+      background-image: url('../assets/curso/portada/fondo-banner-principal-tablet.png') !important
+      background-repeat: no-repeat 
+      background-size: 100% 100%
+      background-position: cover
+    &__info
+      padding-top: 8% !important 
+    h1, p
+      color: $white
+.banner-interno__fondo    
+  background-image: url("../assets/curso/portada/banner_interno.png") !important
+.titulo-principal.color-acento-contenido .titulo-principal__numero 
+  background-color: #212529
+
+.bg1
+  background-color: #E6F2F9
+.bg2
+  background-color: #DCECD1
