--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -59,8 +59,52 @@ figcaption
   background-image: url("../assets/curso/portada/banner_interno.png") !important
 .titulo-principal.color-acento-contenido .titulo-principal__numero 
   background-color: #212529
+.w-card-icon
+  width: min-content
+  z-index: 1
+.w-card-text
+  position: relative
+  padding-left: 50px
+  padding-right: 50px
+  left: -60px
+  top: 10px
+  width: fit-content
 
+.w-card-text1
+  position: relative
+  padding-left: 20px
+  padding-right: 20px
+  left: 0px
+  top: 10px
+  width: fit-content
 .bg1
   background-color: #E6F2F9
 .bg2
   background-color: #DCECD1
+.bg3
+  background-color: #007CBE
+  border-radius: 20px
+.bg4
+  background-color: #99CAE5
+.bg5
+  background-coloe: #A8D08D !important
+  border-radius: 20px !important
+.bg6
+  background-color: #87A771
+.bg7
+  background-color: #EDF0F1
+.bg8 
+  background-color: #F6FAF4
+.fondo1
+  background-image: url('../assets/curso/Tema3/fondo1.png')
+  background-position: center
+  background-size: 100% 100%
+  background-repeat: no-repeat
+  margin-inline: -3.4rem
+  @media screen and (max-width: 992px)
+    margin-inline: -3rem  
+    background-size: cover 
+  @media screen and (max-width: 767px)
+    margin-inline: -1.4rem  
+    background-size: cover 
+
